God I hate myself for using microsoft javascript...  I mean typescript

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content = "width=device-width, initial-scale=1.0" />
+        <meta name="description" content="A powerful bot for your needs" />
+
+        <title>Nabi</title>
     </head>
     <body>
-        <script type="module" src="/src/main.ts"></script>
+    <noscript>Javascript is required to run this application.</noscript>
+        <div id="root"></div>
+        <script type="module" src="src/main.tsx"></script>
     </body>
 </html>
