--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -8,7 +8,7 @@
         <title>Nabi</title>
     </head>
     <body>
-    <noscript>Javascript is required to run this application.</noscript>
+    <noscript>Javascript is required to run this website.</noscript>
         <div id="root"></div>
         <script type="module" src="src/main.tsx"></script>
     </body>
